--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
@@ -162,7 +162,7 @@
             align-items: center;
             transition: all 0.3s ease;
             opacity: 0.5; /* <-- cambio */
-            transform: scale(0.8); /* <-- cambio (más pequeño) */
+            transform: scale(0.6); !important/* <-- cambio (más pequeño) */ 
             width: auto !important;
         }
 
