--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
@@ -352,48 +352,102 @@
 
         <!-- Sección de Proyectos destacados con Swiper -->
         <section class="py-5 bg-light">
-            <div class="container px-5">
-                <div class="text-center mb-5" data-aos="fade-up">
-                    <h2 class="display-5 fw-bolder">
-                        <span class="text-gradient d-inline">Mis proyectos</span>
-                    </h2>
-                </div>
+  <div class="container px-5">
+    <div class="text-center mb-5" data-aos="fade-up">
+      <h2 class="display-5 fw-bolder">
+        <span class="text-gradient d-inline">Mis proyectos</span>
+      </h2>
+    </div>
 
-                <!-- En la sección de Proyectos... -->
-<div class="swiper mySwiper">
-  <div class="swiper-wrapper">
-    <!-- Slide 1 -->
-    <div class="swiper-slide">
-      <div class="project-card">
-        <!-- Contenido 1 -->
+    <div class="swiper mySwiper">
+      <div class="swiper-wrapper">
+        <!-- Slide 1 -->
+        <div class="swiper-slide">
+          <div class="project-card">
+            <div class="project-image">
+              <img src="assets/trump.jpg" alt="La política del engaño">
+            </div>
+            <div class="project-content">
+              <h5 class="project-title fw-bold">La política del engaño</h5>
+              <span 
+                class="btn btn-warning text-white fw-bold mb-2"
+                style="cursor: default; pointer-events: none; font-size: 0.8rem;"
+              >
+                Reportaje - Opinión
+              </span>
+              <p class="project-text">La desinformación como estrategia emocional en la política moderna.</p>
+              <a href="poder-mentira.html" class="btn btn-warning text-white fw-bold">Leer más</a>
+            </div>
+          </div>
+        </div>
+
+        <!-- Slide 2 -->
+        <div class="swiper-slide">
+          <div class="project-card">
+            <div class="project-image">
+              <img src="assets/portadaarte.jpg" alt="Arte y naturaleza">
+            </div>
+            <div class="project-content">
+              <h5 class="project-title fw-bold">Arte y naturaleza</h5>
+              <span 
+                class="btn btn-warning text-white fw-bold mb-2"
+                style="cursor: default; pointer-events: none; font-size: 0.8rem;"
+              >
+                Reseña
+              </span>
+              <p class="project-text">Diálogo entre surrealismo y crisis ecológica. Un paseo por la biomorfología del siglo XX.</p>
+              <a href="arte-naturaleza.html" class="btn btn-warning text-white fw-bold">Leer más</a>
+            </div>
+          </div>
+        </div>
+
+        <!-- Slide 3 -->
+        <div class="swiper-slide">
+          <div class="project-card">
+            <div class="project-image">
+              <img src="assets/portada-salo.jpg" alt="La maternidad en el arte">
+            </div>
+            <div class="project-content">
+              <h5 class="project-title fw-bold">La maternidad en el arte</h5>
+              <span 
+                class="btn btn-warning text-white fw-bold mb-2"
+                style="cursor: default; pointer-events: none; font-size: 0.8rem;"
+              >
+                Reseña
+              </span>
+              <p class="project-text">Interpretación crítica del juicio de Salomón desde lo humano y lo ético.</p>
+              <a href="salomon.html" class="btn btn-warning text-white fw-bold">Leer más</a>
+            </div>
+          </div>
+        </div>
+
+        <!-- Slide 4 (nuevo) -->
+        <div class="swiper-slide">
+          <div class="project-card">
+            <div class="project-image">
+              <img src="assets/otroproyecto.jpg" alt="Otro proyecto">
+            </div>
+            <div class="project-content">
+              <h5 class="project-title fw-bold">Otro proyecto</h5>
+              <span 
+                class="btn btn-warning text-white fw-bold mb-2"
+                style="cursor: default; pointer-events: none; font-size: 0.8rem;"
+              >
+                Columnas de opinión
+              </span>
+              <p class="project-text">Descripción o introducción de tu cuarto proyecto.</p>
+              <a href="#" class="btn btn-warning text-white fw-bold">Leer más</a>
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
-    <!-- Slide 2 -->
-    <div class="swiper-slide">
-      <div class="project-card">
-        <!-- Contenido 2 -->
-      </div>
-    </div>
-    <!-- Slide 3 -->
-    <div class="swiper-slide">
-      <div class="project-card">
-        <!-- Contenido 3 -->
-      </div>
-    </div>
-    <!-- Slide 4 (nuevo) -->
-    <div class="swiper-slide">
-      <div class="project-card">
-        <!-- Contenido 4 -->
-      </div>
+
+      <!-- Flechas -->
+      <div class="swiper-button-next"></div>
+      <div class="swiper-button-prev"></div>
     </div>
   </div>
-
-  <!-- Flechas -->
-  <div class="swiper-button-next"></div>
-  <div class="swiper-button-prev"></div>
-</div>
-            </div>
-        </section>
+</section>
     </main>
 
     <!-- Footer-->
