--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/projects.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/projects.html
@@ -182,7 +182,7 @@
         </div>
     </nav>
 
-    <section class="py-5">
+   <section class="py-5">
         <div class="container px-5 mb-5">
             <div class="text-center mb-5">
                 <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Proyectos</span></h1>
@@ -215,16 +215,15 @@
 
                     <div class="project-card">
                         <div class="project-text">
-                            <a href="rhip.html">
-                                <h2 class="fw-bolder">Vivir hipotecados: crónica de una generación sin margen</h2>
-                                <p>Álex y David, una pareja joven en Madrid, enfrentan la odisea de comprar su primera vivienda en un mercado que parece jugar en su contra. ¿Es posible soñar con un hogar propio en plena crisis de emancipación?</p>
-                                </a>
-                                </div>
-                                <div class="project-image-wrapper">
-                                <img src="assets/rhip.jpg" alt="Portada Vivir hipotecados" class="project-image" />
+                            <a href="salomon.html">
+                                <h2 class="fw-bolder">La abnegación más pura: la maternidad</h2>
+                                <p>Es difícil recorrer los pasillos del Thyssen sin detenerse a ver esta dramática escena...</p>
+                            </a>
+                        </div>
+                        <div class="project-image-wrapper">
+                            <img src="assets/portada-salo.jpg" alt="El juicio de Salomón" class="project-image" />
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
