--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
@@ -407,13 +407,13 @@
         <div class="swiper-slide">
           <div class="project-card">
             <div class="project-image">
-              <img src="assets/otroproyecto.jpg" alt="Otro proyecto">
+              <img src="assets/maribursa.png" alt="Mariposa bursátil">
             </div>
             <div class="project-content">
-              <h5 class="project-title fw-bold">Otro proyecto</h5>
-              <span class="genre-label mb-2">Crónica</span>
-              <p class="project-text">Descripción o introducción de tu cuarto proyecto...</p>
-              <a href="#" class="btn btn-leermas fw-bold">Leer más</a>
+              <h5 class="project-title fw-bold">Del monopolio al mercado global: metamorfosis del IBEX35</h5>
+              <span class="genre-label mb-2">Reportaje</span>
+              <p class="project-text">Un recorrido por la transformación del IBEX 35 desde sus orígenes estatales hasta su consolidación como termómetro global de la economía española.</p>
+              <a href="ibex35.html" class="btn btn-leermas fw-bold">Leer más</a>
             </div>
           </div>
         </div>
