--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
@@ -412,7 +412,7 @@
             <div class="project-content">
               <h5 class="project-title fw-bold">Del monopolio al mercado global: metamorfosis del IBEX35</h5>
               <span class="genre-label mb-2">Reportaje</span>
-              <p class="project-text">Un recorrido por la transformación del IBEX 35 desde sus orígenes estatales hasta su consolidación como termómetro global de la economía española.</p>
+              <p class="project-text">Un recorrido por la transformación del IBEX 35.</p>
               <a href="ibex35.html" class="btn btn-leermas fw-bold">Leer más</a>
             </div>
           </div>
