--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
@@ -251,6 +251,24 @@
                  max-width: 300px;
              }
         }
+
+        .cursor-blink {
+  display: inline-block;
+  font-weight: bold;
+  font-size: 1em;
+  color: #fd7e14;
+  animation: blink-cursor 1s steps(2, start) infinite;
+}
+
+@keyframes blink-cursor {
+  0%, 100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+}
+        
     </style>
 </head>
 <body class="d-flex flex-column h-100">
