--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
@@ -144,114 +144,6 @@
             object-fit: cover;
         }
 
-        /* Estilos para el carrusel de proyectos (Swiper) */
-        .swiper {
-            width: 100%;
-            padding: 20px 0;
-            overflow: visible; /* Mantiene visibles los laterales */
-        }
-        .swiper-wrapper {
-            display: flex;
-            align-items: center;
-        }
-
-        /* Por defecto, hacemos que todos los slides tengan menor escala/opacity */
-        .swiper-slide {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            transition: all 0.3s ease;
-            opacity: 0.5; /* <-- cambio */
-            transform: scale(0.6); !important;/* <-- cambio (más pequeño) */ 
-            width: auto !important;
-        }
-
-        /* El slide activo (en el centro) estará con escala y opacidad completas */
-        .swiper-slide-active {
-            opacity: 1;
-            transform: scale(1);
-        }
-
-        /* Ajuste adicional: la diapositiva inmediata siguiente y anterior
-           también pueden tener una opacidad un poco mayor que el resto.
-           Pero si quieres que tengan la misma que el "resto" no pongas nada extra. */
-        .swiper-slide-prev,
-        .swiper-slide-next {
-            opacity: 0.8; /* <-- cambio */
-            transform: scale(0.9); /* <-- cambio */
-        }
-
-        /* Tarjetas de proyecto */
-        .project-card {
-            background-color: var(--bg-color);
-            color: var(--text-color);
-            border-radius: 10px;
-            overflow: hidden;
-            width: 100%;
-            max-width: 400px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            transition: all 0.3s ease;
-        }
-        .project-image {
-            position: relative;
-            width: 100%;
-            height: 200px;
-            overflow: hidden;
-            background-color: #333;
-        }
-        .project-image img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            opacity: var(--image-opacity);
-            transition: opacity 0.3s ease;
-        }
-        .project-card:hover .project-image img {
-            opacity: 1;
-        }
-        .project-content {
-            padding: 20px;
-            text-align: center;
-        }
-        .project-title {
-            font-size: 1.5rem;
-            margin-bottom: 10px;
-        }
-        .project-text {
-            font-size: 1rem;
-            margin-bottom: 15px;
-            color: var(--muted-text-color);
-        }
-
-        /* Flechas de navegación */
-        .swiper-button-next,
-        .swiper-button-prev {
-            color: var(--text-color);
-            background: rgba(0, 0, 0, 0.1);
-            border-radius: 50%;
-            width: 40px;
-            height: 40px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-        .swiper-button-next::after,
-        .swiper-button-prev::after {
-            font-size: 20px;
-        }
-
-        /* Ajustes para pantallas pequeñas */
-         @media (max-width: 767px) {
-             /* En móviles, solemos mostrar 1 tarjeta al centro y cambiar sus escalas si quieres */
-             .swiper-slide {
-                 opacity: 1;
-                 transform: scale(1);
-             }
-             .project-card {
-                 max-width: 300px;
-             }
-        }
-
         .cursor-blink {
       display: inline-block;
       font-weight: bold;
@@ -545,37 +437,62 @@ function updateSlidesScale(swiper) {
     <script src="js/dark-mode.js"></script>
 
     <!-- Swiper JS -->
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script>
-        var swiper = new Swiper('.mySwiper', {
-            slidesPerView: 3,
-            centeredSlides: true,
-            spaceBetween: 20,
-            loop: true,
-            initialSlide: 1, // El slide "2" es el que se ve centrado inicialmente
-            navigation: {
-                nextEl: '.swiper-button-next',
-                prevEl: '.swiper-button-prev',
-            },
-            breakpoints: {
-                0: {
-                    slidesPerView: 1,
-                    spaceBetween: 10,
-                },
-                768: {
-                    slidesPerView: 3,
-                    spaceBetween: 20,
-                },
-            },
-            on: {
-                init: function () {
-                    this.update();
-                },
-                resize: function () {
-                    this.update();
-                },
-            },
-        });
-    </script>
+        <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+<script>
+  var swiper = new Swiper('.mySwiper', {
+    slidesPerView: 3,
+    centeredSlides: true,
+    spaceBetween: 30,
+    loop: true,
+    initialSlide: 1,
+    navigation: {
+      nextEl: '.swiper-button-next',
+      prevEl: '.swiper-button-prev',
+    },
+    breakpoints: {
+      0: {
+        slidesPerView: 1,
+        spaceBetween: 10,
+      },
+      768: {
+        slidesPerView: 3,
+        spaceBetween: 20,
+      },
+    },
+    on: {
+      init: function () {
+        updateSlidesScale(this);
+      },
+      slideChange: function () {
+        updateSlidesScale(this);
+      },
+      resize: function () {
+        updateSlidesScale(this);
+      },
+    },
+  });
+
+  function updateSlidesScale(swiper) {
+    const slides = swiper.slides;
+    const activeIndex = swiper.activeIndex;
+
+    slides.forEach(function(slide, index) {
+      let distance = Math.abs(swiper.realIndex - swiper.slides[index].getAttribute('data-swiper-slide-index'));
+      // Para loop, ajusta la distancia
+      distance = Math.min(distance, swiper.slides.length - distance);
+
+      let scale = 1 - (distance * 0.15);
+      scale = Math.max(scale, 0.5);
+
+      let opacity = 1 - (distance * 0.2);
+      opacity = Math.max(opacity, 0.4);
+
+      slide.style.transform = `scale(${scale})`;
+      slide.style.opacity = opacity;
+      slide.style.zIndex = 10 - distance;
+    });
+  }
+</script>
 </body>
 </html>
