quitar puntos a swiper.button

--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
@@ -343,8 +343,8 @@
     loop: true,
     initialSlide: 1,
     navigation: {
-      nextEl: '.swiper-button-next',
-      prevEl: '.swiper-button-prev',
+      nextEl: 'swiper-button-next',
+      prevEl: 'swiper-button-prev',
     },
     breakpoints: {
       0: {
