--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
@@ -262,7 +262,7 @@
       <div class="swiper-wrapper">
         
         <!-- Slide 1 -->
-        <div class=".swiper-slide">
+        <div class="swiper-slide">
           <div class="project-card">
             <div class="project-image">
               <img src="assets/trump.jpg" alt="La política del engaño">
